--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <title>Vite + React</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Preconnect to Supabase for faster image loads -->
+    <link rel="preconnect" href="https://tafuuhbytixzppowklvf.supabase.co" crossorigin />
+    <link rel="dns-prefetch" href="https://tafuuhbytixzppowklvf.supabase.co" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
